--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -28,105 +28,28 @@
                         android:text="@string/text_view_cadastro"
                         android:textSize="36sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.504"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textViewNome"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="36dp"
-                        android:text="@string/text_view_nome"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.094"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewCadastro" />
-
-                    <TextView
-                        android:id="@+id/textViewEmail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:text="@string/text_view_email"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.093"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />
-
-                    <TextView
-                        android:id="@+id/textViewSenha"
-                        android:layout_width="wrap_content"
+                    <EditText
+                        android:id="@+id/editTextNome"
+                        android:layout_width="310dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="24dp"
-                        android:text="@string/text_view_senha"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.094"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
-
-                    <TextView
-                        android:id="@+id/textViewConfSenha"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="28dp"
-                        android:text="@string/text_view_conf_senha"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.118"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/editTextSenhaCad" />
-
-                    <EditText
-                        android:id="@+id/editTextNome"
-                        android:layout_width="289dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
                         android:ems="10"
+                        android:hint="@string/edit_text_nome"
                         android:inputType="textPersonName"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.355"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />
+                        app:layout_constraintTop_toBottomOf="@+id/textViewCadastro" />
 
                     <EditText
                         android:id="@+id/editTextSenhaCad"
-                        android:layout_width="295dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="4dp"
-                        android:ems="10"
-                        android:inputType="textPassword"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.38"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewSenha" />
-
-                    <EditText
-                        android:id="@+id/editTextEmail"
-                        android:layout_width="291dp"
+                        android:layout_width="310dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:layout_marginLeft="16dp"
@@ -134,15 +57,31 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:ems="10"
+                        android:hint="@string/edit_text_senha"
+                        android:inputType="textPassword"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+
+                    <EditText
+                        android:id="@+id/editTextEmail"
+                        android:layout_width="310dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:ems="10"
+                        android:hint="@string/edit_text_email"
                         android:inputType="textEmailAddress"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.363"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />
+                        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />
 
                     <EditText
                         android:id="@+id/editTextConfSenha"
-                        android:layout_width="295dp"
+                        android:layout_width="310dp"
                         android:layout_height="41dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginLeft="16dp"
@@ -150,28 +89,29 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:ems="10"
+                        android:hint="@string/edit_text_conf_senha"
                         android:inputType="textPassword"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.38"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewConfSenha" />
+                        app:layout_constraintTop_toBottomOf="@+id/editTextSenhaCad" />
 
                     <Button
                         android:id="@+id/button_criar_conta2"
-                        android:layout_width="295dp"
+                        android:layout_width="310dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
+
+
                         android:layout_marginStart="16dp"
-
-
-                        android:layout_marginTop="28dp"
+                        android:layout_marginTop="32dp"
                         android:background="@color/colorButoes"
                         android:text="@string/button_criar_conta"
                         android:textColor="@color/colorTextoBut"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.38"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/editTextConfSenha" />
             </android.support.constraint.ConstraintLayout>
