--- a/app/src/main/res/layout/activity_mudar_email.xml
+++ b/app/src/main/res/layout/activity_mudar_email.xml
@@ -25,10 +25,9 @@
     </android.support.design.widget.AppBarLayout>
 
 
-
     <Button
         android:id="@+id/button_criar_AlterarDados2"
-        android:layout_width="295dp"
+        android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
@@ -36,7 +35,7 @@
         android:layout_marginStart="16dp"
 
 
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:background="@color/colorButoes"
         android:text="@string/button_mudar_email"
         android:textColor="@color/colorTextoBut"
@@ -47,7 +46,7 @@
 
     <EditText
         android:id="@+id/editTextSenhaMudarEmail"
-        android:layout_width="295dp"
+        android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
@@ -55,53 +54,27 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="@string/edit_text_senha"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSenha3" />
-
-    <TextView
-        android:id="@+id/textViewSenha3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/text_view_senha"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNovoEmail" />
 
     <EditText
         android:id="@+id/editTextNovoEmail"
-        android:layout_width="291dp"
+        android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="64dp"
         android:ems="10"
+        android:hint="@string/text_view_novo_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNovoEmail" />
-
-    <TextView
-        android:id="@+id/textViewNovoEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="108dp"
-        android:text="@string/text_view_novo_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialup.appbar" />
 
