Coloquei td como visivel para teste

--- a/app/src/main/res/menu/menu_frag_titulos_cab.xml
+++ b/app/src/main/res/menu/menu_frag_titulos_cab.xml
@@ -1,5 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <item
         android:id="@+id/action_adicionar_meu_hamba"
@@ -20,12 +21,12 @@
     <item
         android:id="@+id/action_remove_meu_hamba"
         android:title="@string/text_action_excluir_meu_hamba"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_remove_fav"
         android:title="@string/text_action_excluir_meus_fav"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="never" />
 
 
