Diluindo métodos e mudando alguns de seus nome no MainActivity e corSelec das Tabs

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,10 @@
     <color name="colorControlHighlight">#bcbfcc</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlue">#3F51B5</color>
+    <color name="colorRosa">#f956ad</color>
+    <color name="colorBlack">#0d0d0d</color>
+    <color name="colorRosaChoque">#d64090</color>
+
+
 
 </resources>
