Subindo com erro nessas activ* malz

--- a/app/src/main/res/layout/activity_episodios_check_lista.xml
+++ b/app/src/main/res/layout/activity_episodios_check_lista.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorFundo"
-    tools:context=".infra.EpisodiosListCheckActivity">
+    tools:context=".infra.adapter.EpisodiosCheckListaActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/materialup.appbar"
