--- a/app/src/main/res/layout/activity_episodios_check_lista.xml
+++ b/app/src/main/res/layout/activity_episodios_check_lista.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorFundo"
-    tools:context=".infra.adapter.EpisodiosCheckListaActivity">
+    android:background="@color/colorFundo">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/materialup.appbar"
