--- a/app/src/main/res/layout/activity_episodio_check_new.xml
+++ b/app/src/main/res/layout/activity_episodio_check_new.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".infra.adaptersEFragmentos.EpisodioCheck.EpisodioCheckNewActivity">
+    tools:context=".infra.adaptersFragmentos.EpisodioCheck.EpisodioCheckNewActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
