--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -8,4 +8,5 @@
     android:theme="@style/AppTheme.AppBarOverlay"
     app:layout_scrollFlags="scroll|enterAlways"
     app:popupTheme="@style/AppTheme.PopupOverlay"
+    style="@style/ToolBarWithNavigationBack"
      />
