Tela de Avaliacao e Episodios, Cor de fundo de fundo do settings apos selecionar os episodios na cor branco

--- a/app/src/main/res/layout/activity_avaliacao.xml
+++ b/app/src/main/res/layout/activity_avaliacao.xml
@@ -33,7 +33,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@color/colorButoes"
         android:text="@string/Confirmar"
         android:textColor="@color/colorTextoBut"
@@ -45,28 +45,27 @@
         android:id="@+id/txtValorAvaliacao"
         android:layout_width="59dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginRight="72dp"
+        android:layout_marginTop="8dp"
         android:text=""
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblResultado" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingBarUserAvaliar" />
 
     <TextView
         android:id="@+id/lblResultado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="72dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="8dp"
         android:text="@string/text_resultado_user_avaliacao_titulo"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/txtValorAvaliacao"
+        app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarUserAvaliar" />
 
