--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -80,7 +80,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/indicator" />
 
             <android.support.design.widget.FloatingActionButton
-                android:layout_width="40dp"
+                android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
@@ -113,8 +113,8 @@
 
             <RatingBar
                 android:id="@+id/ratingBarMediaPublicoEmGeral"
-                android:layout_width="42dp"
-                android:layout_height="49dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="248dp"
                 android:layout_marginLeft="8dp"
@@ -135,13 +135,14 @@
                 android:id="@+id/textViewAvaliacao"
                 android:layout_width="wrap_content"
                 android:layout_height="41dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="32dp"
                 android:layout_marginStart="0.4dp"
                 android:layout_marginTop="16dp"
                 android:text=""
-                android:textSize="17sp"
+                android:textSize="22dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textViewSinopse"
                 app:layout_constraintEnd_toEndOf="parent"
