--- a/app/src/main/res/layout/adapter_episodio_check.xml
+++ b/app/src/main/res/layout/adapter_episodio_check.xml
@@ -16,7 +16,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="16dp"
+                android:layout_margin="8dp"
                 android:orientation="horizontal">
 
                 <CheckBox
@@ -28,25 +28,25 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="16dp"
+                    android:layout_margin="8dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/textViewNumEpisodio"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_margin="8dp"
                         android:text="@string/text_numero_episodio"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textStyle="bold"
                         android:textAllCaps="true"/>
 
                     <TextView
                         android:id="@+id/textViewEpisodioDescri"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="8dp"
                         android:layout_marginTop="10dp"
                         android:text="@string/text_numero_episodio_desc"
                         android:textStyle="italic"
